[package]
name = "export_type_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"